--- a/.cvsignore
+++ b/.cvsignore
@@ -1,10 +1,14 @@
-blib*
-Makefile
-Makefile.old
-Build
-_build*
-pm_to_blib*
-*.tar.gz
-.lwpcookies
-CSS-Packer-*
-cover_db
+/blib*
+/Makefile
+/Makefile.old
+/Makefile.bak
+/MANIFEST.bak
+/META.yml
+/Build
+/_build*
+/pm_to_blib*
+/*.tar.gz
+/CSS-Packer-*
+/t/stylesheets/*-got.css
+/inc
+.DS_Store
