--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,27 @@
---- #YAML:1.0
-name:                CSS-Packer
-version:             0.2
-abstract:            Another CSS minifier
-license:             perl
-author:              
-    - Merten Falk <nevesenin@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
+---
+abstract: 'Another CSS minifier'
+author:
+  - 'Merten Falk, C<< <nevesenin at cpan.org> >>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+  Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
+distribution_type: module
+generated_by: 'Module::Install version 1.00'
+license: perl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: CSS::Packer
+name: CSS-Packer
+no_index:
+  directory:
+    - inc
+    - t
+requires:
+  Regexp::RegGrp: 0.001_002
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/nevesenin/css-packer-perl
+version: 0.03_01
